--- a/index.html
+++ b/index.html
@@ -1145,6 +1145,13 @@
             .skills-grid { grid-template-columns: 1fr; }
             .contact-grid { grid-template-columns: 1fr; }
         }
+        @media (max-width: 768px) {
+    .navigation {
+        display: none !important;
+    }
+}
+
+
     </style>
 </head>
 <body>
