--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
 
         .scroll-indicator {
             position: absolute;
+            top: 30rem;
             bottom: 2rem;
             left: 50%;
             transform: translateX(-50%);
@@ -1145,7 +1146,7 @@
             .skills-grid { grid-template-columns: 1fr; }
             .contact-grid { grid-template-columns: 1fr; }
         }
-        @media (max-width: 768px) {
+        @media (max-width: 500px) {
     .navigation {
         display: none !important;
     }
